crates/main/amethystate/tests/fails/lookup_node_not_struct.stderr
error[E0109]: type arguments are not allowed on builtin type `u16`
  --> tests/fails/lookup_node_not_struct.rs:9:1
   |
9  | #[amethystate(prefix = "ui")]
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ type argument not allowed
...
12 |     pub proxy_port_node: u16,
   |                          --- not allowed on builtin type `u16`
   |
   = note: this error originates in the attribute macro `amethystate` (in Nightly builds, run with -Z macro-backtrace for more info)
help: primitive type `u16` doesn't have generic parameters
   |
9  - #[amethystate(prefix = "ui")]
   |

error[E0109]: type arguments are not allowed on builtin type `u16`
  --> tests/fails/lookup_node_not_struct.rs:11:30
   |
11 |     #[amestate(lookup_node = "port", parent = NetworkState)]
   |                              ^^^^^^ type argument not allowed
12 |     pub proxy_port_node: u16,
   |                          --- not allowed on builtin type `u16`
   |
help: primitive type `u16` doesn't have generic parameters
   |
11 -     #[amestate(lookup_node = "port", parent = NetworkState)]
12 -     pub proxy_port_node: u16,
11 +     #[amestate(lookup_node = ,
   |

error[E0277]: the trait bound `u16: AmeStateNode<S>` is not satisfied
  --> tests/fails/lookup_node_not_struct.rs:11:30
   |
11 |       #[amestate(lookup_node = "port", parent = NetworkState)]
   |  ______________________________^
12 | |     pub proxy_port_node: u16,
   | |____________________________^ the trait `AmeStateNode<S>` is not implemented for `u16`
   |
   = help: the following other types implement trait `AmeStateNode<S>`:
             NetworkState<S>
             UiState<S>

error[E0283]: type annotations needed
 --> tests/fails/lookup_node_not_struct.rs:9:1
  |
9 | #[amethystate(prefix = "ui")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
  |
  = note: cannot satisfy `_: Store`
  = help: the trait `Store` is implemented for `amethystate::stores::RedbStore`
note: required by a bound in `UiState::<S>::fork_with_id`
 --> tests/fails/lookup_node_not_struct.rs:9:1
  |
9 | #[amethystate(prefix = "ui")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `UiState::<S>::fork_with_id`
  = note: this error originates in the attribute macro `amethystate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0283]: type annotations needed
 --> tests/fails/lookup_node_not_struct.rs:9:1
  |
9 | #[amethystate(prefix = "ui")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
  |
  = note: cannot satisfy `_: Store`
  = help: the trait `Store` is implemented for `amethystate::stores::RedbStore`
note: required by a bound in `UiState::<S>::subscribe_all`
 --> tests/fails/lookup_node_not_struct.rs:9:1
  |
9 | #[amethystate(prefix = "ui")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `UiState::<S>::subscribe_all`
  = note: this error originates in the attribute macro `amethystate` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0283]: type annotations needed
 --> tests/fails/lookup_node_not_struct.rs:9:1
  |
9 | #[amethystate(prefix = "ui")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ cannot infer type
  |
  = note: cannot satisfy `_: Store`
  = help: the trait `Store` is implemented for `amethystate::stores::RedbStore`
note: required by a bound in `UiState::<S>::subscribe_all_external`
 --> tests/fails/lookup_node_not_struct.rs:9:1
  |
9 | #[amethystate(prefix = "ui")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `UiState::<S>::subscribe_all_external`
  = note: this error originates in the attribute macro `amethystate` (in Nightly builds, run with -Z macro-backtrace for more info)
